# memchr

./: .travis.yml  Cargo.toml  Dockerfile  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  mayhem.yml
.vim/: coc-settings.json
bench/: Cargo.toml  README.md
bench/data/: README.md
bench/data/code/: README.md
bench/data/opensubtitles/: en-huge.txt
bench/data/pathological/: README.md  defeat-simple-vector-freq.txt  defeat-simple-vector-repeated.txt  defeat-simple-vector.txt  repeated-rare-huge.txt
bench/runs/: README.md  make-pretty-tables
bench/runs/2021-04-30_initial/: README.md  raw.json
bench/runs/2021-05-01_regex-and-bstr/: README.md  raw.json
bench/runs/2021-05-06_sliceslice-0.3.0/: README.md  raw.json
bench/runs/2022-04-29_wasm-changes/: README.md  baseline.json  test.json
bench/src/: bench.rs  data.rs  imp.rs  inputs.rs
bench/src/memchr/: imp.rs  inputs.rs  mod.rs
bench/src/memmem/: byterank.rs  imp.rs  inputs.rs  mod.rs  sliceslice.rs
benches/: bench.rs
benchmarks/: engines.toml
benchmarks/definitions/memchr/sherlock/: common.toml  never.toml  rare.toml  uncommon.toml  verycommon.toml
benchmarks/definitions/memmem/: byterank.toml  code.toml  pathological.toml  sliceslice.toml
benchmarks/definitions/memmem/subtitles/: common.toml  never.toml  rare.toml
benchmarks/engines/libc/: Cargo.toml  main.rs
benchmarks/engines/quick-strings/: Cargo.toml  main.rs
benchmarks/engines/rust-bufchr/: Cargo.toml  main.rs
benchmarks/engines/rust-bytecount/: Cargo.toml  main.rs
benchmarks/engines/rust-jetscii/: Cargo.toml  main.rs
benchmarks/engines/rust-memchr/: Cargo.toml  main.rs
benchmarks/engines/rust-memchrold/: Cargo.toml  main.rs
benchmarks/engines/rust-sliceslice/: Cargo.toml  main.rs
benchmarks/engines/rust-std/: Cargo.toml  build.rs  main.rs
benchmarks/engines/stringzilla/: Cargo.toml  main.rs
benchmarks/haystacks/code/: rust-library.rs
benchmarks/haystacks/opensubtitles/: ru-huge.txt
benchmarks/haystacks/pathological/: md5-huge.txt  random-huge.txt  repeated-rare-small.txt
benchmarks/haystacks/sherlock/: README.md
benchmarks/haystacks/sliceslice/: README.md  haystack.txt  i386-notutf8.txt  i386.txt
benchmarks/record/aarch64/: 2023-08-17.csv  2023-08-20.csv  2023-08-24.csv  2023-08-24_2.csv  2023-08-26.csv  2023-08-27.csv  2023-12-29.csv
benchmarks/record/aarch64-unknown-freebsd/: 2026-07-10.csv  2026-07-10.txt
benchmarks/record/i686-unknown-linux-gnu/: 2026-07-10.csv  2026-07-10.txt
benchmarks/record/powerpc64le-unknown-linux-gnu/: 2026-07-10.csv  2026-07-10.txt
benchmarks/record/riscv64gc-unknown-linux-gnu/: 2026-07-10.csv  2026-07-10.txt
benchmarks/record/x86_64/: 2023-07-31_baseline.csv  2023-08-07.csv  2023-08-09.csv  2023-08-15.csv  2023-08-17.csv  2023-08-20.csv  2023-08-23.csv  2023-08-24.csv  2023-08-24_2.csv  2023-08-25.csv  2023-08-26.csv  2023-08-27.csv  2023-12-29.csv  2025-09-15.csv
benchmarks/record/x86_64-pc-windows-msvc/: 2026-07-10.csv  2026-07-10.txt
benchmarks/regexes/: zero-zero-dd-dd.txt
benchmarks/regexes/sliceslice/: README.md  words-by-length-desc.txt  words.txt
benchmarks/shared/: lib.rs
ci/: script.sh
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: memchr.rs  memchr2.rs  memchr3.rs  memchrn.rs  memmem.rs  memrchr.rs  memrchr2.rs  memrchr3.rs  memrmem.rs
mayhemfiles/: Mayhemfile_memchr  Mayhemfile_memchr2  Mayhemfile_memchr3  Mayhemfile_memmem  Mayhemfile_memrchr  Mayhemfile_memrchr2  Mayhemfile_memrchr3  Mayhemfile_memrmem
scripts/: make-byte-frequency-table
src/: c.rs  cow.rs  fallback.rs  iter.rs  lib.rs  memchr.rs  naive.rs  vector.rs  x86_detect.rs
src/arch/: mod.rs
src/arch/aarch64/: memchr.rs  mod.rs
src/arch/aarch64/neon/: memchr.rs  packedpair.rs
src/arch/all/: memchr.rs  mod.rs  rabinkarp.rs  twoway.rs
src/arch/all/packedpair/: mod.rs
src/arch/generic/: memchr.rs  packedpair.rs
src/arch/loongarch64/: memchr.rs  mod.rs
src/arch/loongarch64/lsx/: memchr.rs  mod.rs  packedpair.rs
src/arch/wasm32/: memchr.rs  mod.rs
src/arch/wasm32/simd128/: memchr.rs
src/arch/x86_64/: memchr.rs
src/arch/x86_64/avx2/: detect.rs  memchr.rs  mod.rs  packedpair.rs
src/arch/x86_64/sse2/: memchr.rs  packedpair.rs
src/memchr/: genericsimd.rs  iter.rs  mod.rs
src/memchr/aarch64/: mod.rs  neon.rs
src/memchr/x86/: mod.rs  sse2.rs
src/memmem/: genericsimd.rs  mod.rs  rarebytes.rs  searcher.rs  vector.rs
src/memmem/byterank/: default.rs  mod.rs
src/memmem/prefilter/: fallback.rs  genericsimd.rs  mod.rs
src/memmem/prefilter/x86/: avx.rs
src/memmem/x86/: avx.rs
src/tests/: iter.rs  memchr.rs  mod.rs  vector.rs
src/tests/memchr/: iter.rs  memchr.rs  mod.rs  naive.rs  prop.rs
src/x86/: avx.rs  mod.rs  sse2.rs
