[package]
name = "memchr"
version = "1.0.2"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>", "bluss"]
description = "Safe interface to memchr."
documentation = "https://docs.rs/memchr/"
homepage = "https://github.com/BurntSushi/rust-memchr"
repository = "https://github.com/BurntSushi/rust-memchr"
readme = "README.md"
keywords = ["memchr", "char", "scan", "strchr", "string"]
license = "Unlicense/MIT"

[badges]
travis-ci = { repository = "BurntSushi/rust-memchr" }
appveyor = { repository = "BurntSushi/rust-memchr" }

[lib]
name = "memchr"
bench = false

[features]
default = ["use_std", "libc"]
use_std = ["libc", "libc/use_std"]

[dependencies]
libc = { version = "0.2.18", default-features = false, optional = true }

[dev-dependencies]
quickcheck = "0.4.1"

[profile.test]
opt-level = 3
