[package]
name = "memchr"
version = "2.2.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>", "bluss"]
description = "Safe interface to memchr."
documentation = "https://docs.rs/memchr/"
homepage = "https://github.com/BurntSushi/rust-memchr"
repository = "https://github.com/BurntSushi/rust-memchr"
readme = "README.md"
keywords = ["memchr", "char", "scan", "strchr", "string"]
license = "Unlicense/MIT"
exclude = ["/ci/*", "/.travis.yml", "/Makefile", "/appveyor.yml"]

[badges]
travis-ci = { repository = "BurntSushi/rust-memchr" }
appveyor = { repository = "BurntSushi/rust-memchr" }

[lib]
name = "memchr"
bench = false

[features]
default = ["use_std"]
use_std = []

[dependencies]
libc = { version = "0.2.18", default-features = false, optional = true }

[dev-dependencies]
quickcheck = { version = "0.8", default-features = false }

[profile.test]
opt-level = 3
