[package]
publish = false
name = "memchr-bench"
version = "0.0.1"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Criterion benchmark suite for memchr."
homepage = "https://github.com/BurntSushi/rust-memchr"
repository = "https://github.com/BurntSushi/rust-memchr"
license = "Unlicense/MIT"

[lib]
bench = false

[[bench]]
name = "memchr"
harness = false
path = "src/bench.rs"

[dependencies]
criterion = "0.3.3"
memchr = { version = "*", path = ".." }
libc = "0.2.81"

[profile.bench]
debug = true

[profile.release]
debug = true
