[package]
publish = false
name = "main"
version = "2.6.1"  # should match 'memchr' version below
edition = "2021"

[workspace]

# Uncomment to benchmark changes.
# [patch.crates-io]
# memchr = { path = "../../../" }

[dependencies]
anyhow = "1.0.72"
memchr = "=2.6.1"

[dependencies.shared]
path = "../../shared"

[[bin]]
name = "main"
path = "main.rs"

[profile.release]
debug = true
