[package]
publish = false
name = "main"
version = "2.5.0"  # should match 'memchr' version below
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0.72"
memchr = "=2.5.0"

[dependencies.shared]
path = "../../shared"

[[bin]]
name = "main"
path = "main.rs"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
