[package]
publish = false
name = "main"
version = "0.4.1"  # should match 'sliceslice' version below
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0.72"
sliceslice = { version = "0.4.1", features = ["aarch64"] }

[dependencies.shared]
path = "../../shared"

[[bin]]
name = "main"
path = "main.rs"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
