[package]
publish = false
name = "main"
version = "0.4.2"  # should match 'sliceslice' version below
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0.72"
sliceslice = "0.4.2"

[dependencies.shared]
path = "../../shared"

[[bin]]
name = "main"
path = "main.rs"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
