[package]
publish = false
name = "main"
version = "4.0.14"  # should match 'stringzilla' version below
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0.100"
stringzilla = "=4.0.14"

[dependencies.shared]
path = "../../shared"

[[bin]]
name = "main"
path = "main.rs"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
